done quick menu end screen hero

--- a/index.html
+++ b/index.html
@@ -50,17 +50,22 @@
             </div>
             <div class="menu">
                 <p class="text-menu-top">TOP</p>
-                <div>
-                    <img/>
-                    <p>설명회<br/>신청하기</p>
+                <div class="option-menu">
+                    <img src="image/case_menu_home.png"/>
+                    <p class="text-meunu-home">설명회<br/>신청하기</p>
                 </div>
-                <div>
-                    <img/>
-                    <p>무료체험<br/>신청하기</p>
+                <div class="option-menu">
+                    <img src="image/chat_menu_home.png"/>
+                    <p class="text-meunu-home">무료체험<br/>신청하기</p>
                 </div>
-                <div>
-                    <img/>
-                    <p>쌍둥이 매칭 <br/>체험하기</p>
+                <div class="option-menu">
+                    <img src="image/screen_menu_home.png"/>
+                    <p class="text-meunu-home">쌍둥이 매칭 <br/>체험하기</p>
+                </div>
+                <div class="connect-network">
+                    <img class="img-menu-home" src="image/icon_insta.png">
+                    <img class="img-menu-home" src="image/icon_youtube.png">
+                    <img class="img-menu-home" src="image/icon_b.png">
                 </div>
             </div>
         </div>
