--- a/index.html
+++ b/index.html
@@ -87,8 +87,52 @@
                 <p class="title-quick-menu">KMT</p>
             </div>
         </div>
-        <div class="screen-two">
-            <h2>h2</h2>
+        <div class="screen-survey1">
+            <div class="container-survey1">
+                <div class="box-survey">
+                    <p class="text-question-survey1">왜 메타수학인가요?</p>
+                    <h1 class="text-answer-survey1">
+                        선생님들께서<br/><span class="text-answer-survey2">선택하는 이유</span>는<br/>분명합니다.</h1>
+                </div>
+                <div>
+                    <div class="container-information">
+                        <img class="img-avt-user" src="image/user1.png"/>
+                        <div class="box-information">
+                            <div class="content-information">
+                                <button class="btn-information">#맞춤형 학습</button>
+                                <p class="username">김정현 선생님</p>
+                                <p class="nameschool">종로 ㅇㅇ학원</p>
+                            </div>
+                            <p class="content-reason">1년 이상 사용하고 있는 가장 큰 이유 학생들에게
+                                제공되는 맞춤형 문제 때문입니다.</p>
+                        </div>
+                    </div>
+                    <div class="container-information">
+                        <img class="img-avt-user" src="image/user2.png"/>
+                        <div class="box-information">
+                            <div class="content-information">
+                                <button class="btn-information">#오답관리</button>
+                                <p class="username">김정현 선생님</p>
+                                <p class="nameschool">종로 ㅇㅇ학원</p>
+                            </div>
+                            <p class="content-reason">복잡했던 아이들 오답관리를<br/>
+                                이젠 메타수학으로 편하게 관리해요!</p>
+                        </div>
+                    </div>
+                    <div class="container-information">
+                        <img class="img-avt-user" src="image/user3.png"/>
+                        <div class="box-information">
+                            <div class="content-information">
+                                <button class="btn-information" style="background: #1E85FF">#적중률</button>
+                                <p class="username">김정현 선생님</p>
+                                <p class="nameschool">종로 ㅇㅇ학원</p>
+                            </div>
+                            <p class="content-reason">복잡했던 아이들 오답관리를<br/>
+                                이젠 메타수학으로 편하게 관리해요!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
