--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@
                 </div>
             </div>
         </div>
+        <div class="screen-survey2">
+           <div class="container-survey2">
+               <p class="text-question-survey2">어떤 업무가 가장 부담되시나요?</p>
+               <div class="box-answer-management">
+                   <button class="content-survey2  btn-content-survey2">오답관리</button>
+                   <p class="content-survey2">를 효율적으로 할 수 없을까?</p>
+               </div>
+               <p class="content-survey2" style="opacity: 0.55">채점관리를 효율적으로 할 수 없을까?</p>
+               <p class="content-survey2" style="opacity: 0.35">검증된 문항을 접하고 싶어!</p>
+               <p class="content-survey2" style="opacity: 0.15">내신 대비를 톡톡히 하고 싶어!</p>
+               <p class="content-survey3">끝이 없는 수업 업무,<br/>
+                   메타수학이 업무를 덜어드려요.</p>
+           </div>
+        </div>
     </div>
 </body>
 </html>
