--- a/index.html
+++ b/index.html
@@ -148,7 +148,51 @@
                    메타수학이 업무를 덜어드려요.</p>
            </div>
         </div>
-        <div class="screen-cta">
+        <div class="section-03">
+            <h1 class="title-section03"><span class="color-gradient">맞춤학습에 최적화</span>된<br/>
+                문제지 제작, 메타수학
+            </h1>
+            <p class="text-note">단 한 번의 클릭으로 쉽고 빠르게!<br/>
+                학생별 학습 수준에 맞춘 시스템으로 문제지를 만들어보세요.</p>
+            <div class="container-content-section03">
+                <div class="box_item1">
+                    <div class="circle-item1">
+                            <img class="img_circle-item1" src="image/section03/icon_splash.png"/>
+                    </div>
+                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                        모의고사, 연산력, 진단 평가 등<br/>
+                        선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
+                    <div class="box-img-item1">
+                        <img class="img_item1" src="image/section03/recording.png"/>
+                    </div>
+                </div>
+                <div>
+                    <div class="box_item2">
+                        <div class="circle-item1" style="background: #503BE1">
+                            <img class="img_circle-item2" src="image/section03/icon_infility.png"/>
+                        </div>
+                        <h2 class="title-item2">60만문제를무한대로이용</h2>
+                        <p class="content-item2">출판사와 연구소 제휴로 구축한 고품질의<br/>
+                            검증된 문제은행으로, 초1~ 고3 까지 60만 문항을<br/>
+                            무제한으로 이용할 수 있어요.</p>
+                        <img class="img_item2" src="image/section03/jobs.png"/>
+                    </div>
+                    <div class="box_item2" style="margin-top: 32px">
+                        <div class="circle-item2">
+                            <img class="img_circle-item3" src="image/section03/icon_king.png"/>
+                        </div>
+                        <h2 class="title-item2">교재 매칭</h2>
+                        <p class="content-item2">교과서 & 참고서 약 1500여 종에 대하여<br/>
+                            95% 이상의 매칭률로 쌍둥이와 유사유형 문제를<br/>
+                            제공합니다. 효과적인 워크북 제작, 오답클리닉,<br/>
+                            시험 대비 학습이 가능합니다.</p>
+                        <img class="img_item2" src="image/section03/img_about_company.png"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
                 성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
             <div class="btn-cta text-btn">7일 무료 체험 신청하기</div>
