--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="container-content-section03">
                 <div class="box_item1">
                     <div class="circle-item1">
-                            <img class="img_circle-item1" src="image/section03/icon_splash.png"/>
+                        <img class="img_circle-item1" src="image/section03/icon_splash.png"/>
                     </div>
                     <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
                     <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
@@ -191,6 +191,38 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="section-04">
+            <h1 class="title-section03" style="margin-top: 150px">빠르고 정확한<span class="color-gradient">오답관리</span>
+            </h1>
+            <p class="text-note">문항별, 유형별 오답관리까지! 체계적인 맞춤 피드백 시스템으로<br/>학생 실력향상에 최적화된 클리닉을 제공합니다.</p>
+            <div class="container-content-section03">
+                <div class="box_item1">
+                    <div class="circle-item1-section4">
+                        <img class="img_circle-item1-section04" src="image/section4/icon_people.png"/>
+                    </div>
+                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                        모의고사, 연산력, 진단 평가 등<br/>
+                        선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
+                    <div class="box-img-item1-section04">
+                        <img class="img_item1_section04" src="image/section4/fontend_IOS.jfif"/>
+                    </div>
+                </div>
+                <div class="box_item1">
+                    <div class="circle-item1-section4" style="background: #449968">
+                        <img class="img_circle-item2-section04" src="image/section4/icon_toggle.png"/>
+                    </div>
+                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                        모의고사, 연산력, 진단 평가 등<br/>
+                        선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
+                    <div class="box-img-item2-section04">
+                        <img class="img_item2_section04" src="image/section4/transection.jfif"/>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
