--- a/index.html
+++ b/index.html
@@ -224,6 +224,22 @@
             </div>
 
         </div>
+        <div class="section-05">
+           <div>
+               <h1 class="title-section05">
+                   <span class="color-gradient">자동채점으로</span>빠르게!<br/>
+                   <span class="color-gradient">QR채점으로</span>간편하게!<br/>
+                   쉽고 빠른 채점관리
+               </h1>
+               <p class="content-section05">학생홈에서 문제를 풀어 답안을 입력하면 자동으로 채점이 돼요.<br/>
+                   선생님용 어플, 학생어플, 채점어플 을 활용하여<br/>
+                   언제 어디서나 쉽고 간편하게 채점관리를 경험해보세요! </p>
+           </div>
+           <div class="box-img-section-05">
+               <img class="img-section5" src="image/section03/jobs.png" />
+           </div>
+
+        </div>
         <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
                 성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
