--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -240,6 +240,37 @@
            </div>
 
         </div>
+        <div class="section-06">
+            <div class="box-img-section-05">
+                <img class="img-section6" src="image/login.jfif" />
+            </div>
+            <div>
+                <h1 class="title-section06">
+                    메타수학은<span class="color-gradient">정확한</span><br/>
+                    <span class="color-gradient">평가 분석 솔루션</span>을<br/>
+                    제공합니다.
+                </h1>
+                <p class="content-section05">학생홈에서 문제를 풀어 답안을 입력하면 자동으로 채점이 돼요.<br/>
+                    선생님용 어플, 학생어플, 채점어플 을 활용하여<br/>
+                    언제 어디서나 쉽고 간편하게 채점관리를 경험해보세요! </p>
+            </div>
+        </div>
+        <div class="section-07">
+            <h1 class="title-section07">강력한<span class="color-gradient">교재매칭</span>기능을 탑재한 <br/>수학 문제은행, 메타수학!</h1>
+        </div>
+        <div class="section-08"></div>
+        <div class="section-09">
+            <h1 class="title-section09">타사에서는 따라올 수 없는<br/>
+                <span class="color-gradient">정밀한 5단계 세분화</span>
+            </h1>
+            <p class="content-section09">세부유형 10,000개, 개념&꼴 60,000개!<br/>많은 교육 기업들이 메타수학을 선택한 이유는 타사에서는 따라올 수 없는 정밀한 ‘4단계 세분화’ 때문!<br/>
+                ‘5단계 분류’는 문제 유형에서 더 나아가 개념&꼴, 행동영역, 난이도 등을 고려한 AI로<br/>
+                단순 유사 문항을 뛰어넘어 쌍둥이 문제까지 매칭시킵니다.</p>
+            <div style="width: 100%; display: flex; justify-content: center">
+                <img class="img_chart" src="image/background-chart.png"/>
+            </div>
+        </div>
+        <div class="screen-brand"></div>
         <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
                 성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
