done section brand

--- a/index.html
+++ b/index.html
@@ -258,7 +258,48 @@
         <div class="section-07">
             <h1 class="title-section07">강력한<span class="color-gradient">교재매칭</span>기능을 탑재한 <br/>수학 문제은행, 메타수학!</h1>
         </div>
-        <div class="section-08"></div>
+        <div class="section-08">
+            <p class="text-work-experience">지금까지 경험하지 못한 </p>
+            <h1 class="title-section-08">메타수학만의 서비스<br/>
+                <span class="color-gradient">프리미엄</span> 기능</h1>
+            <div class="box-content">
+                <div class="item-section-8">
+                    <img src="image/youtube.png"/>
+                    <div style="display: flex; flex-direction: column; width: 416px;">
+                      <p class="title1-section8">이해할 때까지 개념정리!</p>
+                      <p class="title2-section8">개념 동영상 강의</p>
+                  </div>
+                    <p class="content-item">초등~고등 까지  개념 학습용 동영상 강의를 제공해요.<br/>
+                        학생홈에서 개념 동영상을 통해 언제 어디서나 학습이 가능해요.<br/>
+                        놓친 진도도 이해할 때까지 재생이 가능하고,<br/>
+                        교안을 다운로드 받아서 개념노트 제작도 할 수 있어요!</p>
+                </div>
+                <div class="item-section-8">
+                    <img src="image/pen.png"/>
+                    <div style="display: flex; flex-direction: column;width: 416px">
+                        <p class="title1-section8">우리 교실만의 교재를, 쉽고 빠르게!</p>
+                        <p class="title2-section8">교재 만들기</p>
+                    </div>
+                    <p class="content-item">메타수학이 제공하는 문제로 선생님만의 교재를 쉽고 빠르게 제작해보세요.<br/>
+                        선생님이 원하는 문제 추출 부터 표지 디자인까지!<br/>
+                        교재 만들기 기능으로  한번에 가능해요.</p>
+                </div>
+                <div class="item-section-8">
+                    <img src="image/file.png"/>
+                    <div style="display: flex; flex-direction: column;width: 416px">
+                            <p class="title1-section8">내신 준비는 기출부터!</p>
+                            <p class="title2-section8">시험지 업로드</p>
+                    </div>
+                    </p>
+                    <p class="content-item">
+                        인근 학교의 기출 문제지를 업로드하면, 해당 문항의 쌍둥이,  유사유형<br/>
+                        문제를 뽑아볼 수 있어요. 기출문제 쌍둥이로 내신 완벽 대비부터, 학교와<br/>
+                        학년별 출제 경향 파악까지 중간, 기말고사 준비도 걱정없어요.
+                    </p>
+                </div>
+            </div>
+
+        </div>
         <div class="section-09">
             <h1 class="title-section09">타사에서는 따라올 수 없는<br/>
                 <span class="color-gradient">정밀한 5단계 세분화</span>
@@ -270,7 +311,37 @@
                 <img class="img_chart" src="image/background-chart.png"/>
             </div>
         </div>
-        <div class="screen-brand"></div>
+        <div class="screen-brand">
+            <h1 class="title-section-brand">메타수학의<span class="color-gradient">고품질</span>문항 & 학습시스템</h1>
+            <p class="content-section-brand">많은 국내 교육기업들이 사용하고, 출판사 제휴로 입증된 메타수학의 고품질 문항 & 학습시스템,<br/>
+                빅데이터와 A.I 인공지능으로 더욱 강력해지고 있습니다.</p>
+            <div class="container-brand">
+                <div class="box-branch-brand">
+                    <img class="item1-section-brand center-column-row" src="image/section-brand/image6.png">
+                    <img class="item2-section-brand center-column-row" src="image/section-brand/image8.png">
+                    <img class="item3-section-brand center-column-row" src="image/section-brand/image7.png">
+                    <img class="item4-section-brand center-column-row" src="image/section-brand/image9.png">
+                </div>
+                <div class="box-branch-brand">
+                    <img class="item5-section-brand center-column-row" src="image/section-brand/image1.png">
+                    <img class="item6-section-brand center-column-row" src="image/section-brand/image10.png">
+                    <img class="item7-section-brand center-column-row" src="image/section-brand/image14.png">
+                    <img class="item8-section-brand center-column-row" src="image/section-brand/image3.png">
+                </div>
+                <div class="box-branch-brand">
+                    <img class="item9-section-brand center-column-row" src="image/section-brand/image13.png">
+                    <img class="item10-section-brand center-column-row" src="image/section-brand/image12.png">
+                    <img class="item11-section-brand center-column-row" src="image/section-brand/image5.png">
+                    <img class="item12-section-brand center-column-row" src="image/section-brand/image15.png">
+                </div>
+                <div class="box-branch-brand">
+                    <img class="item13-section-brand center-column-row" src="image/section-brand/image16.png">
+                    <img class="item14-section-brand center-column-row" src="image/section-brand/image2.png">
+                    <img class="item15-section-brand center-column-row" src="image/section-brand/image11.png">
+                    <img class="item16-section-brand center-column-row" src="image/section-brand/image17.png">
+                </div>
+            </div>
+        </div>
         <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
                 성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
@@ -278,7 +349,6 @@
         </div>
         <div class="screen-footer">
             <div class="container-footer">
-
             </div>
         </div>
     </div>
