--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                     <img class="img-home" src="image/image_home.png"/>
                 </div>
             </div>
-            <div class="menu">
+            <div class="menu flex-center-column">
                 <p class="text-menu-top">TOP</p>
-                <div class="option-menu">
+                <div class="option-menu flex-column">
                     <img src="image/case_menu_home.png"/>
                     <p class="text-meunu-home">설명회<br/>신청하기</p>
                 </div>
-                <div class="option-menu">
+                <div class="option-menu flex-column">
                     <img src="image/chat_menu_home.png"/>
                     <p class="text-meunu-home">무료체험<br/>신청하기</p>
                 </div>
-                <div class="option-menu">
+                <div class="option-menu flex-column">
                     <img src="image/screen_menu_home.png"/>
                     <p class="text-meunu-home">쌍둥이 매칭 <br/>체험하기</p>
                 </div>
@@ -69,24 +69,26 @@
                 </div>
             </div>
         </div>
+
         <div class="quick-menu">
-            <div class="option-quick-menu">
+            <div class="option-quick-menu flex-items-self-center">
                   <img class="img-quick-menu" src="image/icon_book.png"/>
                   <p class="title-quick-menu">교재매칭</p>
             </div>
-            <div class="option-quick-menu">
+            <div class="option-quick-menu flex-items-self-center">
                 <img class="img-quick-menu" src="image/icon_pen.png"/>
                 <p class="title-quick-menu">교재제작</p>
             </div>
-            <div class="option-quick-menu">
+            <div class="option-quick-menu flex-items-self-center">
                 <img class="img-quick-menu" src="image/icon_book_open.png"/>
                 <p class="title-quick-menu">콘텐츠</p>
             </div>
-            <div class="option-quick-menu">
+            <div class="option-quick-menu flex-items-self-center">
                 <img class="img-quick-menu" src="image/icon_file.png"/>
                 <p class="title-quick-menu">KMT</p>
             </div>
         </div>
+
         <div class="screen-survey1">
             <div class="container-survey1">
                 <div class="box-survey">
@@ -96,8 +98,8 @@
                 </div>
                 <div>
                     <div class="container-information">
-                        <img class="img-avt-user" src="image/user1.png"/>
-                        <div class="box-information">
+                        <img class="img-avt-user center-column-row-self" src="image/user1.png"/>
+                        <div class="flex-column">
                             <div class="content-information">
                                 <button class="btn-information">#맞춤형 학습</button>
                                 <p class="username">김정현 선생님</p>
@@ -108,8 +110,8 @@
                         </div>
                     </div>
                     <div class="container-information">
-                        <img class="img-avt-user" src="image/user2.png"/>
-                        <div class="box-information">
+                        <img class="img-avt-user center-column-row-self" src="image/user2.png"/>
+                        <div class="flex-column">
                             <div class="content-information">
                                 <button class="btn-information">#오답관리</button>
                                 <p class="username">김정현 선생님</p>
@@ -120,8 +122,8 @@
                         </div>
                     </div>
                     <div class="container-information">
-                        <img class="img-avt-user" src="image/user3.png"/>
-                        <div class="box-information">
+                        <img class="img-avt-user center-column-row-self" src="image/user3.png"/>
+                        <div class="flex-column">
                             <div class="content-information">
                                 <button class="btn-information" style="background: #1E85FF">#적중률</button>
                                 <p class="username">김정현 선생님</p>
@@ -134,6 +136,7 @@
                 </div>
             </div>
         </div>
+
         <div class="screen-survey2">
            <div class="container-survey2">
                <p class="text-question-survey2">어떤 업무가 가장 부담되시나요?</p>
@@ -148,7 +151,8 @@
                    메타수학이 업무를 덜어드려요.</p>
            </div>
         </div>
-        <div class="section-03">
+
+        <div class="section-03 flex-items-self-center">
             <h1 class="title-section03"><span class="color-gradient">맞춤학습에 최적화</span>된<br/>
                 문제지 제작, 메타수학
             </h1>
@@ -192,7 +196,8 @@
                 </div>
             </div>
         </div>
-        <div class="section-04">
+
+        <div class="section-04 flex-items-self-center">
             <h1 class="title-section03" style="margin-top: 150px">빠르고 정확한<span class="color-gradient">오답관리</span>
             </h1>
             <p class="text-note">문항별, 유형별 오답관리까지! 체계적인 맞춤 피드백 시스템으로<br/>학생 실력향상에 최적화된 클리닉을 제공합니다.</p>
@@ -224,6 +229,7 @@
             </div>
 
         </div>
+
         <div class="section-05">
            <div>
                <h1 class="title-section05">
@@ -240,6 +246,7 @@
            </div>
 
         </div>
+
         <div class="section-06">
             <div class="box-img-section-05">
                 <img class="img-section6" src="image/login.jfif" />
@@ -255,10 +262,121 @@
                     언제 어디서나 쉽고 간편하게 채점관리를 경험해보세요! </p>
             </div>
         </div>
-        <div class="section-07">
+
+        <div class="section-07 flex-items-self-center">
             <h1 class="title-section07">강력한<span class="color-gradient">교재매칭</span>기능을 탑재한 <br/>수학 문제은행, 메타수학!</h1>
+            <div class="box-item1">
+                <div class="item01">
+                    <p class="title-item1">1,525권</p>
+                    <p class="content-item1">지원 교재 , 참고서 수</p>
+                    <div class="img-item1">
+                        <img src="image/section7/icon_app.png"/>
+                    </div>
+                </div>
+                <div class="item01" style="margin-left: 32px">
+                    <p class="title-item1">605,172개</p>
+                    <p class="content-item1">현재 이용 가능한 문항 수</p>
+                    <div class="img-item1">
+                        <img src="image/section7/icon_infor.png"/>
+                    </div>
+                </div>
+            </div>
+            <div class="box-item02">
+                <div class="item02">
+                    <h1 class="title-item2">오답<br/>
+                        클리닉</h1>
+                    <p class="content-item2">모르면 알 때까지, 유형별 문항별 오답학습을 통해 틀린 문제를 알 때까지 확실히 피드백 학습이 가능해요!</p>
+                    <div class="container-section7" >
+                        <div class="box-item-section07" style="margin-top: 0px">
+                            <div class="img-item1-section07 center-row">
+                                <img  src="image/section7/icon-webflow.png"/>
+                            </div>
+                            <div class="img-item1-section07 center-row" >
+                                <img src="image/section7/icon-shopify.png"/>
+                            </div>
+                            <div  class="img-item1-section071 center-row">
+                                <img src="image/section7/icon-Zapier.png"/>
+                            </div>
+                        </div>
+                        <div class="box-item-section07">
+                            <div class="img-item21-section07 center-row">
+                                <img src="image/section7/icon-PayPal.png"/>
+                            </div>
+                            <div class="img-item22-section07 center-row">
+                                <img src="image/section7/icon-Mastercard.png"/>
+                            </div>
+                            <div class="img-item23-section07 center-row">
+                                <img src="image/section7/icon-visa.png"/>
+                            </div>
+                            <div class="img-item24-section07 center-row">
+                                <img src="image/section7/icon_gg.png"/>
+                            </div>
+                        </div>
+                        <div class="box-item-section07">
+                            <div class="img-item31-section07 center-row">
+                                <img src="image/section7/icon-apple.png"/>
+                            </div>
+                            <div class="img-item32-section07 center-row">
+                                <img src="image/section7/icon-amazon.png"/>
+                            </div>
+                            <div class="img-item33-section07 center-row">
+                                <img src="image/section7/icon-bitcoin.png"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item02 ml-mr-32">
+                    <h1 class="title-item2" style="font-size: 35px">95% 이상<br/>
+                        정확한 교재 매칭률</h1>
+                    <p class="content-item2">모든 교과서, 참고서별로 문항별 쌍둥이,  유사 유형 문제를 4배수까지 제공하여 내신 완벽 대비와 반복 클리닉 학습이 가능해요.</p>
+                    <div class="box-content-item2">
+                        <div style="margin-right: 24px">
+                            <div class="box-img-item2-section07 flex-justify-center">
+                                <img src="image/section7/icon-laptop.png"/>
+                            </div>
+                            <p class="name-device">New Laptop</p>
+                            <p class="price-device">400$</p>
+                        </div>
+                        <div>
+                            <div class="box-img-item3-section07 flex-justify-center">
+                                <img style="width: 72px; height: 72px;" src="image/section7/icon-bicycle.png"/>
+                            </div>
+                            <p class="name-device">Dream bike</p>
+                            <p class="price-device">200$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item02">
+                    <h1 class="title-item2">다양한<br/>
+                        문제 유형</h1>
+                    <p class="content-item2">초등 저학년을 위한 선잇기, 영역선택형 부터 수식형, 객관식, 주관식, 서술형 등을 통해 문제 해결력과 창의력 향상에 도움을 줘요.</p>
+                    <div class="content-question-section7">
+                        <div class="item-question-section7">
+                            <div class="box-question-section7">
+                                <img src="image/section7/icon_appple.png"/>
+                            </div>
+                                <p class="company">Apple <span class="field-company"><br/>Electronic</span></p>
+                            <p class="price-section7">-799$</p>
+                        </div>
+                        <div class="item-question-section7">
+                            <div class="box-question-section7">
+                                <img src="image/section7/icon_amazon.png"/>
+                            </div>
+                            <p class="company">Amazon <span class="field-company"><br/>Shopping</span></p>
+                            <p class="price-section7">-99$</p>
+                        </div> <div class="item-question-section7">
+                        <div class="box-question-section7">
+                            <img src="image/section7/icon-gg.png"/>
+                        </div>
+                        <p class="company">Google <span class="field-company"><br/>Ads</span></p>
+                        <p class="price-section7">-99$</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="section-08">
+
+        <div class="section-08 flex-items-self-center">
             <p class="text-work-experience">지금까지 경험하지 못한 </p>
             <h1 class="title-section-08">메타수학만의 서비스<br/>
                 <span class="color-gradient">프리미엄</span> 기능</h1>
@@ -300,6 +418,7 @@
             </div>
 
         </div>
+
         <div class="section-09">
             <h1 class="title-section09">타사에서는 따라올 수 없는<br/>
                 <span class="color-gradient">정밀한 5단계 세분화</span>
@@ -311,43 +430,47 @@
                 <img class="img_chart" src="image/background-chart.png"/>
             </div>
         </div>
-        <div class="screen-brand">
+
+        <div class="screen-brand flex-items-self-center">
             <h1 class="title-section-brand">메타수학의<span class="color-gradient">고품질</span>문항 & 학습시스템</h1>
             <p class="content-section-brand">많은 국내 교육기업들이 사용하고, 출판사 제휴로 입증된 메타수학의 고품질 문항 & 학습시스템,<br/>
                 빅데이터와 A.I 인공지능으로 더욱 강력해지고 있습니다.</p>
-            <div class="container-brand">
+            <div class="container-brand flex-items-self-center">
                 <div class="box-branch-brand">
-                    <img class="item1-section-brand center-column-row" src="image/section-brand/image6.png">
-                    <img class="item2-section-brand center-column-row" src="image/section-brand/image8.png">
-                    <img class="item3-section-brand center-column-row" src="image/section-brand/image7.png">
-                    <img class="item4-section-brand center-column-row" src="image/section-brand/image9.png">
+                    <img class="item1-section-brand flex-justify-self-center" src="image/section-brand/image6.png">
+                    <img class="item2-section-brand flex-justify-self-center" src="image/section-brand/image8.png">
+                    <img class="item3-section-brand flex-justify-self-center" src="image/section-brand/image7.png">
+                    <img class="item4-section-brand flex-justify-self-center" src="image/section-brand/image9.png">
                 </div>
                 <div class="box-branch-brand">
-                    <img class="item5-section-brand center-column-row" src="image/section-brand/image1.png">
-                    <img class="item6-section-brand center-column-row" src="image/section-brand/image10.png">
-                    <img class="item7-section-brand center-column-row" src="image/section-brand/image14.png">
-                    <img class="item8-section-brand center-column-row" src="image/section-brand/image3.png">
+                    <img class="item5-section-brand flex-justify-self-center" src="image/section-brand/image1.png">
+                    <img class="item6-section-brand flex-justify-self-center" src="image/section-brand/image10.png">
+                    <img class="item7-section-brand flex-justify-self-center" src="image/section-brand/image14.png">
+                    <img class="item8-section-brand flex-justify-self-center" src="image/section-brand/image3.png">
                 </div>
                 <div class="box-branch-brand">
-                    <img class="item9-section-brand center-column-row" src="image/section-brand/image13.png">
-                    <img class="item10-section-brand center-column-row" src="image/section-brand/image12.png">
-                    <img class="item11-section-brand center-column-row" src="image/section-brand/image5.png">
-                    <img class="item12-section-brand center-column-row" src="image/section-brand/image15.png">
+                    <img class="item9-section-brand flex-justify-self-center" src="image/section-brand/image13.png">
+                    <img class="item10-section-brand flex-justify-self-center" src="image/section-brand/image12.png">
+                    <img class="item11-section-brand flex-justify-self-center" src="image/section-brand/image5.png">
+                    <img class="item12-section-brand flex-justify-self-center" src="image/section-brand/image15.png">
                 </div>
                 <div class="box-branch-brand">
-                    <img class="item13-section-brand center-column-row" src="image/section-brand/image16.png">
-                    <img class="item14-section-brand center-column-row" src="image/section-brand/image2.png">
-                    <img class="item15-section-brand center-column-row" src="image/section-brand/image11.png">
-                    <img class="item16-section-brand center-column-row" src="image/section-brand/image17.png">
+                    <img class="item13-section-brand flex-justify-self-center" src="image/section-brand/image16.png">
+                    <img class="item14-section-brand flex-justify-self-center" src="image/section-brand/image2.png">
+                    <img class="item15-section-brand flex-justify-self-center" src="image/section-brand/image11.png">
+                    <img class="item16-section-brand flex-justify-self-center" src="image/section-brand/image17.png">
                 </div>
             </div>
         </div>
+
         <div class="screen-cta ">
             <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
                 성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
             <div class="btn-cta text-btn">7일 무료 체험 신청하기</div>
         </div>
+
         <div class="screen-footer">
+
             <div class="container-footer">
             </div>
         </div>
