--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     <div class="circle-item1">
                         <img class="img_circle-item1" src="image/section03/icon_splash.png"/>
                     </div>
-                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
-                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                    <h2 class="title-item1-section3">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1-section03">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
                         모의고사, 연산력, 진단 평가 등<br/>
                         선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
                     <div class="box-img-item1">
@@ -176,8 +176,8 @@
                         <div class="circle-item1" style="background: #503BE1">
                             <img class="img_circle-item2" src="image/section03/icon_infility.png"/>
                         </div>
-                        <h2 class="title-item2">60만문제를무한대로이용</h2>
-                        <p class="content-item2">출판사와 연구소 제휴로 구축한 고품질의<br/>
+                        <h2 class="title-item2-section03">60만문제를무한대로이용</h2>
+                        <p class="content-item2-section03">출판사와 연구소 제휴로 구축한 고품질의<br/>
                             검증된 문제은행으로, 초1~ 고3 까지 60만 문항을<br/>
                             무제한으로 이용할 수 있어요.</p>
                         <img class="img_item2" src="image/section03/jobs.png"/>
@@ -186,8 +186,8 @@
                         <div class="circle-item2">
                             <img class="img_circle-item3" src="image/section03/icon_king.png"/>
                         </div>
-                        <h2 class="title-item2">교재 매칭</h2>
-                        <p class="content-item2">교과서 & 참고서 약 1500여 종에 대하여<br/>
+                        <h2 class="title-item2-section03 ">교재 매칭</h2>
+                        <p class="content-item2-section03">교과서 & 참고서 약 1500여 종에 대하여<br/>
                             95% 이상의 매칭률로 쌍둥이와 유사유형 문제를<br/>
                             제공합니다. 효과적인 워크북 제작, 오답클리닉,<br/>
                             시험 대비 학습이 가능합니다.</p>
@@ -206,8 +206,8 @@
                     <div class="circle-item1-section4">
                         <img class="img_circle-item1-section04" src="image/section4/icon_people.png"/>
                     </div>
-                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
-                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                    <h2 class="title-item1-section3">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1-section03">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
                         모의고사, 연산력, 진단 평가 등<br/>
                         선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
                     <div class="box-img-item1-section04">
@@ -218,8 +218,8 @@
                     <div class="circle-item1-section4" style="background: #449968">
                         <img class="img_circle-item2-section04" src="image/section4/icon_toggle.png"/>
                     </div>
-                    <h2 class="title-item1">문제지 만들기 전용 메뉴</h2>
-                    <p class="content-item1">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
+                    <h2 class="title-item1-section3">문제지 만들기 전용 메뉴</h2>
+                    <p class="content-item1-section03">자동 맞춤 출제, DIY출제, 내신대비, 수능기출, EBS변형,<br/>
                         모의고사, 연산력, 진단 평가 등<br/>
                         선생님이 필요로하는 모든 문제지 제작을 간편하게!</p>
                     <div class="box-img-item2-section04">
@@ -464,14 +464,42 @@
         </div>
 
         <div class="screen-cta ">
-            <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
-                성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
-            <div class="btn-cta text-btn">7일 무료 체험 신청하기</div>
+          <img class="img-cta" src="image/background-cta.png" />
+          <div class="content-cta">
+              <p class="text-waring">아직도 경험해 보지 못하셨나요?<br/>
+                  성공하는 선생님은 메타수학을 사용하고 있습니다.</p>
+              <div class="btn-cta text-btn">7일 무료 체험 신청하기</div>
+          </div>
         </div>
 
         <div class="screen-footer">
-
             <div class="container-footer">
+                <div class="box-logo-footer">
+                    <img src="image/footer/log.png"/>
+                    <div class="box-netword-footer">
+                        <img src="image/footer/instagram.png"/>
+                        <img src="image/footer/youtube.png"/>
+                        <img src="image/footer/B.png"/>
+                    </div>
+                </div>
+                <div class="container-footer-text">
+                    <div class="header-footer">
+                        <p class="text-header-footer">메인</p>
+                        <p class="text-header-footer">회사소개</p>
+                        <p class="text-header-footer">핵심기능</p>
+                        <p class="text-header-footer">요금안내</p>
+                        <p class="text-header-footer">사용후기</p>
+                        <p class="text-header-footer">설명회/이벤트</p>
+                        <p class="text-header-footer">고객센터</p>
+                        <p class="text-header-footer">개인정보보호정책</p>
+                    </div>
+                    <div class="content-footer-text">
+                           <p class="text-content-footer">사업자등록번호: 141 - 88 - 00838 <span>|</span> <span>주소 : 서울특별시 강서구 양천로 551-17  405 (가양동, 한화비즈메트로 1차) (주)메타교육</span></p>
+                           <p class="text-content-footer">E-mail  : mjcha68@gmail.com |<span>고객센터 : 02 - 6949 - 3389</span> <span>| FAX : 02-6957-0601</span></p>
+                           <p class="text-content-footer"><span>대표이사 : 최봉근 |</span>개인정보보호책임자 : 차명진 | <span>통신판매신고업번호 : 제 2017 - 서울강서 - 17169</span></p>
+                           <p class="text-content-footer">전자출판물 인증번호  : I410-ECN-0104-2022-410-001710769</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
